--- a/frontend/style.css
+++ b/frontend/style.css
@@ -7,8 +7,8 @@
 
 body {
   margin: 0;
-  background: linear-gradient(180deg, #f0f9ff, #ffffff);
-  color: #0f172a;
+  background: linear-gradient(180deg, #5fbad8, #ede9e9);
+  color: #0e2d76;
 }
 
 /* ===== SCREEN SYSTEM ===== */
@@ -65,7 +65,7 @@ body {
 button {
   margin-top: 25px;
   padding: 14px 26px;
-  background: #0284c7;
+  background: #4e87a3;
   color: white;
   border: none;
   border-radius: 8px;
